--- a/tehnici web/complexe/style.css
+++ b/tehnici web/complexe/style.css
@@ -1,68 +1,66 @@
- body {
-       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
- }
- h1 {
+body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+h1 {
     color: #004d00;
  }
 
 p {
+    padding: 8px 5px;
     color:  #331a00;
+    font-size: 20px;
     font-weight: bold;
 }
 
- .main-container {
-    /* background-color: red; */
+.main-container {
     position: absolute;
     left: 15%;
     right: 15%;
-  }
+}
 
-  .input-wrapper {
-      border-radius: 20px;
-      background-color: #ffffb3;
-      opacity: 0.9;
-      text-align: center;
-      padding: 10px 10px;
-       /* width: 360px;
-       margin: auto; */
-  }
+.input-wrapper {
+    border-radius: 20px;
+    padding: 10px 10px;
+    background-color: #ffffb3;
+    opacity: 0.9;
+    text-align: center;
+}
 
-  .visible-border {
+.number-forms {
+    width: 80px !important;
+}
 
+.buttons-container {
+    margin-top: 10px;
+    text-align: center;
+
+}
+
+.operation-button {
+    margin: 10px 10px 5px 10px !important;
+    height: 45px;
+    width: 45px;
+    font-weight: bold;
+}
+
+.visible-border {
     background: none;
     border-style: dashed;
     border-color: #577205;
     font-size: 20px;
-  }
+}
 
-
-  .number-forms {
-      width: 80px !important;
-  }
-
-  .button {
-      margin: 10px 10px 5px 10px !important;
-      height: 45px;
-      width: 45px;
-  }
-  .buttons-container {
-    margin-top: 10px;
-    text-align: center;
-
-  }
-
-  #equation-div {
-
+#equation-div {
     height: 50px;
-    font-size: 20px;
     margin-bottom: 20px;
     border-style: dashed;
     border-color: #577205;
-  }
+}
 
-  .fill-gap-space {
-      height: 30px;
-  }
+.fill-gap-space {
+    margin-bottom: 30px;
+}
 
 
 
