wip - put together as site

--- a/tehnici web/matrici/style.css
+++ b/tehnici web/matrici/style.css
@@ -37,6 +37,33 @@ input {
     width: 100%;
 }
 
+/* menu styling */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #003300;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #a3a375;
+    color: #003300;
+}
+
+
 
 
 
