--- a/tehnici web/complexe/style.css
+++ b/tehnici web/complexe/style.css
@@ -62,6 +62,28 @@ p {
     margin-bottom: 30px;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color:  #ff9933;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+    color: #ffffcc;
+}
+
+li a:hover {
+    background-color: #ffffcc ;
+    color: #408000;
+}
+
+
 
 
 
