--- a/tehnici web/style.css
+++ b/tehnici web/style.css
@@ -1,24 +1,15 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+
+.body {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
-li {
-    float: left;
+.smaller-card {
+   width: 22rem;
+   height: 29rem;
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+.add-gap {
+    margin-bottom: 20px;
 }
-
-li a:hover {
-    background-color: #111;
-}
-
