--- a/my-tribute-page/style.css
+++ b/my-tribute-page/style.css
@@ -1,57 +1,38 @@
 
-body {
-  /* font-size: 14px;
-  font-size: 1.4rem; */
+  * {
+  font-size: 14px;
   font-family: 'Comfortaa', cursive;
   text-align: justify;
-}
+  }
 
   .header {
     background-image: url("https://i.ytimg.com/vi/7YrvzRN-U2c/maxresdefault.jpg");
     background-size:100%;
     background-repeat:no-repeat;
-    height: 7.5rem;
-
+    margin-top: 0;
   }
-
-  .container-fluid {
-    /* background-color: red; */
-    position: absolute;
-    left: 15%;
-    right: 15%;
+  .header h1 {
+      margin-top: 30px;
+      font-size: 4rem;
   }
 
   .well {
     background-color:#fcfcfc;
   }
 
-
-  h1 {
-      font-size: 4rem;
-      font-family: 'Montserrat', sans-serif;
-  }
-
   blockquote {
       font-size: 1.4rem;
   }
 
-  /* #div1 {
-    padding-right: 30px;
-    /* background-color: red;  */
-  } */
-
-  #div2 {
-    /* margin-top: 10px; */
-  }
-
-  .yellow-bk {
-    background-color: yellowgreen;
-  }
-
-  .row {
-     margin-right: 0px;
-     margin-left: 0px;
+  .story img {
+    margin-top: 30px;
 }
+
+@media (max-width: 12450px)  {
+    .discography > ul > li {
+        list-style-type: none;
+    }
+  }
 
 
 
